--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="channel_id">my_service</string>
+    <string name="channel_name">My Background Service</string>
+    <string name="intent_name">data</string>
+    <string name="intent_value">fromoutside</string>
+    <string name="content_title">Service notification</string>
+    <string name="content_text_running">Running</string>
+    <string name="content_text_finish">Finished</string>
 </resources>
